    * Documented prompt()
    * vendor install was not adding to packlist or updating perllocal.
    - Supporting $Config{vendorarchexp} and $Config{vendorlibexp}.
    - Fixed conflict on VMS between logical names and directories 
      (bleadperl 17488)
    - Fixed space-vs-tab bug on Netware (bleadperl 17579)
    - Mysterious NetWare fix from Ananth (bleadperl 17376)

6.03 Wed Jun 19 17:06:14 EDT 2002
    - Documented that we're clamping down on cargo-cult MakeMaker
      programming.
    - Eased up the parameter verification to leave errant values alone.
    - Doug MacEachern documented LDDLFLAGS and added to known parameters.
    - Possible fix for XS compiles on Cygwin for pre 5.8 perls.

6.02 Sat Jun 15 19:46:06 EDT 2002
    - ExtUtils::Installed->modules() was broken in scalar context
    - Sync bleadperl 16922:  Netware updates from Ananth Kesari.
    - Sync bleadperl 16922:  MM_NW5 tests
    - Sync bleadperl 16938 & 16974:  MM_MacOS->macify fixes from pudge.
    - Sync bleadperl 16989 & 16942:  Small test fixes for MacPerl from pudge.
    - Improved WriteMakefile param verification to differenciate between
      parameters which don't exist and those that just take strings/numbers.
      [RT #707]
    * Documented TEST_VERBOSE

6.01 Thu May 30 14:48:57 EDT 2002
    - MacOS Classic fixes from Pudge: recursive make repair,
      post_initialize() now used, DEFINE & INC work with relative paths,
      removed dead hybrid method/function call code.
    * WriteMakefile now a bit more tolerant of wrong arguments, it will
      warn and try to soldier on rather than just vomiting.
    - Netware whitespace nits (bleadperl@16811)
    - Netware Perl version number tag when building dynamic libraries
      needs to match the current perl version instead of being hard coded
      (a mutation of bleadperl@16851)
    - OS/2 bug in TEST_F target found by John Poltorak (bleadperl@16839)
    - README in 6.00 still declared this as alpha.

6.00 Sat May 25 17:14:09 EDT 2002